fixing navbar on mobile

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,7 +12,7 @@
 	z-index:5;
 
 	background-color:white;
-	min-width:857px;
+	min-width:500px;
 	height:50px;
 	width:100%;
 }
@@ -38,7 +38,7 @@
 	width:60%;
 	height:50px;
 	border-bottom:1px solid black;
-	min-width:514px;
+	min-width:300px;
 
 }
 
@@ -383,6 +383,31 @@ animation-duration:2s;
 	#about-section-left-half{
 		margin-top:200px;
 	}
+
+	.navbar{
+		position:fixed;
+
+		text-align:center;
+
+		z-index:5;
+
+		background-color:white;
+		min-width:200px;
+		height:50px;
+		width:100%;
+	}
+
+	.underline{
+		position:fixed;
+		top:0;
+		left:20%;
+		width:60%;
+		height:50px;
+		border-bottom:1px solid black;
+		min-width:100px;
+
+	}
+
 
 /*	.section-title{
 		bottom:40px;
